// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogBoxInspectorCodeFrame should render a code frame 1`] = `
<LogBoxInspectorSection
  action={<AppInfo />}
  heading="Source"
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(51, 51, 51, 1)",
        "borderRadius": 3,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "rgba(255, 255, 255, 0.1)",
          "borderBottomWidth": 1,
          "padding": 10,
        }
      }
    >
      <ScrollView
        horizontal={true}
      >
        <Ansi
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontFamily": "Menlo",
              "fontSize": 12,
              "includeFontPadding": false,
              "lineHeight": 20,
            }
          }
          text="  197 | });
    198 |
  > 199 | export default CrashReactApp;
        | ^
    200 |"
        />
      </ScrollView>
    </View>
    <LogBoxButton
      backgroundColor={
        Object {
          "default": "transparent",
          "pressed": "rgba(34, 34, 34, 1)",
        }
      }
      onPress={[Function]}
      style={
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 0.5)",
            "flex": 1,
            "fontFamily": "Menlo",
            "fontSize": 12,
            "includeFontPadding": false,
            "lineHeight": 16,
            "textAlign": "center",
          }
        }
      >
        CrashReactApp.js
         (199:1)
      </Text>
    </LogBoxButton>
  </View>
</LogBoxInspectorSection>
`;

exports[`LogBoxInspectorCodeFrame should render a code frame without a location 1`] = `
<LogBoxInspectorSection
  action={<AppInfo />}
  heading="Source"
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(51, 51, 51, 1)",
        "borderRadius": 3,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "rgba(255, 255, 255, 0.1)",
          "borderBottomWidth": 1,
          "padding": 10,
        }
      }
    >
      <ScrollView
        horizontal={true}
      >
        <Ansi
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontFamily": "Menlo",
              "fontSize": 12,
              "includeFontPadding": false,
              "lineHeight": 20,
            }
          }
          text="  197 | });
    198 |
  > 199 | export default CrashReactApp;
        | ^
    200 |"
        />
      </ScrollView>
    </View>
    <LogBoxButton
      backgroundColor={
        Object {
          "default": "transparent",
          "pressed": "rgba(34, 34, 34, 1)",
        }
      }
      onPress={[Function]}
      style={
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 0.5)",
            "flex": 1,
            "fontFamily": "Menlo",
            "fontSize": 12,
            "includeFontPadding": false,
            "lineHeight": 16,
            "textAlign": "center",
          }
        }
      >
        CrashReactApp.js
      </Text>
    </LogBoxButton>
  </View>
</LogBoxInspectorSection>
`;

exports[`LogBoxInspectorCodeFrame should render null for no code frame 1`] = `null`;
